# end-to-end-churn-ml

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: default.yaml
data/: new_customers.csv
docs/: DEPLOYMENT_CHECKLIST.md  PORTFOLIO_REPORT.md  PRODUCTION_GUIDE.md  PROJECT_REPORT.md  THRESHOLD_ANALYSIS_NOTE.md
models/: best_model.joblib  data_quality_report.json  drift_reference.json  final_feature_names.csv  final_test_results.csv  preprocessor.joblib  registry.json  threshold_analysis_val.csv  train_summary.json
notebooks/: 01_business_context.ipynb  02_data_audit.ipynb  03_data_preparation.ipynb  04_EDA.ipynb  05_preprocessing.ipynb  06_baseline_model.ipynb  07_feature_importance._and_interpretation.ipynb  08_feature_engineering.ipynb  09_hyperparameter_tuning.ipynb  10_final_evaluation_and_business_decision.ipynb  11_model_improvement.ipynb
src/: evaluate.py
src/churn_ml_decision/: cli.py  config.py  evaluate.py  exceptions.py  io.py  logging_config.py  mlflow_utils.py  model_registry.py  monitoring.py  pipeline.py  predict.py  prepare.py  registry.py  schemas.py  track.py  train.py  validators.py
tests/: test_cli.py  test_config.py  test_dvc_pipeline.py  test_evaluate.py  test_io.py  test_mlflow_utils.py  test_model_registry.py  test_monitoring.py  test_pipeline.py  test_predict.py  test_prepare.py  test_quality.py  test_registry.py  test_schemas.py  test_thresholds.py  test_track.py  test_train.py  test_validators.py
